--- a/example/index.html
+++ b/example/index.html
@@ -20,6 +20,7 @@
         </div>
         <button type="button" onclick="uploadArticle('art')">上传art</button>
         <button type="button" onclick="uploadArticle('tech')">上传tech</button>
+        <button type="button" onclick="putArticle()">确认修改</button>
         <div>
             <div style="display: inline-block;">
                 <h3>艺术文章：</h3>
